Poprawki w bazie danych, usunięcie zdublowanych kolumn, początki strony logów, dodanie brakującej edycji lokalizacji i nazwy ekranu
